tempest.scenario.test_server_basic_ops.TestServerBasicOps.test_server_basicops was renamed as: tempest.scenario.test_server_basic_ops.TestServerBasicOps.test_server_basic_ops therefore, fix src/tempest_exclude.conf which contained it.

--- a/src/tempest_exclude.conf
+++ b/src/tempest_exclude.conf
@@ -72,7 +72,7 @@ tempest.scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_
 tempest.scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_port_security_disable_security_group
 tempest.scenario.test_network_basic_ops.TestNetworkBasicOps.test_port_security_macspoofing_port
 tempest.scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_port_update_new_security_group
-tempest.scenario.test_server_basic_ops.TestServerBasicOps.test_server_basicops
+tempest.scenario.test_server_basic_ops.TestServerBasicOps.test_server_basic_ops
 tempest.scenario.test_shelve_instance.TestShelveInstance.test_shelve_instance
 tempest.scenario.test_shelve_instance.TestShelveInstance.test_shelve_volume_backed_instance
 tempest.scenario.test_snapshot_pattern.TestSnapshotPattern.test_snapshot_pattern
