Do not run neutron.tests.tempest.api.test_trunk tests which are failing.

--- a/src/tempest_exclude.conf
+++ b/src/tempest_exclude.conf
@@ -48,12 +48,9 @@ tempest.api.network.test_ports.PortsIpV6TestJSON.test_create_update_port_with_se
 tempest.api.network.test_ports.PortsIpV6TestJSON.test_update_port_with_security_group_and_extra_attributes
 tempest.api.network.test_ports.PortsIpV6TestJSON.test_update_port_with_two_security_groups_and_extra_attributes
 
-
 tempest.api.volume.admin.test_volumes_backup.VolumesBackupsTest.test_volume_backup_create_get_detailed_list_restore_delete
 
 tempest.scenario.test_dashboard_basic_ops.TestDashboardBasicOps.test_basic_scenario
-
-
 
 tempest.scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes.test_encrypted_cinder_volumes_cryptsetup
 tempest.scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes.test_encrypted_cinder_volumes_luks
@@ -82,3 +79,6 @@ ceilometer.tests.tempest.scenario.test_object_storage_telemetry_middleware.TestO
 ceilometer.tests.tempest.api.test_telemetry_notification_api.TelemetryNotificationAPITest.test_check_glance_v1_notifications
 ceilometer.tests.tempest.api.test_telemetry_notification_api.TelemetryNotificationAPITest.test_check_glance_v2_notifications
 ceilometer.tests.tempest.api.test_telemetry_notification_api.TelemetryNotificationAPITest.test_check_nova_notification
+
+neutron.tests.tempest.api.test_trunk
+neutron.tests.tempest.api.test_trunk_negative
